// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VncActions VncActions renders correctly component hierarchy 1`] = `
<DocumentFragment>
  <div
    class="console-actions-vnc"
    style="grid-area: actions-extra; display: flex; flex-wrap: wrap; justify-content: flex-end; column-gap: var(--pf-t--global--spacer--sm);"
  >
    <button
      aria-expanded="false"
      class="pf-v6-c-menu-toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-:r8:"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        My Send Shortcut description
      </span>
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            width="1em"
          >
            <svg
              class="pf-v6-icon-default"
              viewBox="0 0 320 512"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
            <svg
              class="pf-v6-icon-rh-ui"
              viewBox="0 0 32 32"
            >
              <path
                d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
              />
            </svg>
          </svg>
        </span>
      </span>
    </button>
    <button
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-:r9:"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Disconnect
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`VncActions VncActions renders correctly html 1`] = `
<DocumentFragment>
  <div
    class="console-actions-vnc"
    style="grid-area: actions-extra; display: flex; flex-wrap: wrap; justify-content: flex-end; column-gap: var(--pf-t--global--spacer--sm);"
  >
    <button
      aria-expanded="false"
      class="pf-v6-c-menu-toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-:rd:"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        My Send Shortcut description
      </span>
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            width="1em"
          >
            <svg
              class="pf-v6-icon-default"
              viewBox="0 0 320 512"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
            <svg
              class="pf-v6-icon-rh-ui"
              viewBox="0 0 32 32"
            >
              <path
                d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
              />
            </svg>
          </svg>
        </span>
      </span>
    </button>
    <button
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-:re:"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Disconnect
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`VncActions placeholder render test 1`] = `
<DocumentFragment>
  <div
    class="console-actions-vnc"
    style="grid-area: actions-extra; display: flex; flex-wrap: wrap; justify-content: flex-end; column-gap: var(--pf-t--global--spacer--sm);"
  >
    <button
      aria-expanded="false"
      class="pf-v6-c-menu-toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-:r3:"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        Send Key
      </span>
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            width="1em"
          >
            <svg
              class="pf-v6-icon-default"
              viewBox="0 0 320 512"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
            <svg
              class="pf-v6-icon-rh-ui"
              viewBox="0 0 32 32"
            >
              <path
                d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
              />
            </svg>
          </svg>
        </span>
      </span>
    </button>
    <button
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-:r4:"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Disconnect
      </span>
    </button>
  </div>
</DocumentFragment>
`;
